# Applied_Cryptography

./: CMakeLists.txt  Client  Client.cpp  ClientSideProtocol.cpp  Client_2  Client_backup.cpp  DH_params.pem  Francesco_private_key.pem  Francesco_public_key.pem  Marco_private_key.pem  Marco_public_key.pem  README.md  Rachele_private_key.pem  Rachele_public_key.pem  Server  Server.cpp  User_account.cpp  Utility.cpp  Utility.hpp  file_test_dh.txt  file_test_dh2.txt  tester  tester.cpp
